--- a/client/watson.jade
+++ b/client/watson.jade
@@ -100,7 +100,7 @@ template(name='doc_emotion_small')
     span.rounded(style="height:7px;width:{{to_percent anger_percent}}%;background-color:red" title="{{to_percent anger_percent}}% anger")
     // .spacer
 template(name='call_watson')
-    button.ui.large.circular.button.autotag
+    button.ui.large.button.autotag
         i.dna.icon
         |autotag
         |#{mode}
@@ -108,7 +108,7 @@ template(name='call_watson')
         i.checkmark.icon
 
 template(name='autotag')
-    button.ui.large.icon.circular.button.autotag
+    button.ui.large.icon.button.autotag
         i.dna.icon
         // |autotag
         if watson 
@@ -116,7 +116,7 @@ template(name='autotag')
             
             
 // template(name='call_tone')
-//     button.ui.icon.large.circular.button.call
+//     button.ui.icon.large.button.call
 //         i.smile.icon
 //         // |call tone
 //     if page_doc.tone 
@@ -250,8 +250,8 @@ template(name='tone_view')
                     i.chevron.up.link.grey.large.icon.upvote_sentence
                     i.chevron.down.link.grey.large.icon.downvote_sentence
                     each tones
-                        // .ui.basic.inverted.small.compact.circular.label(class="{{calculated_size 'score'}} #{tone_label_class}") 
-                        .ui.basic.inverted.small.compact.circular.label(class="#{tone_label_class}") 
+                        // .ui.basic.inverted.small.compact.label(class="{{calculated_size 'score'}} #{tone_label_class}") 
+                        .ui.basic.inverted.small.compact.label(class="#{tone_label_class}") 
                             span.ui.text
                                 |#{tone_id} &nbsp;
                             | {{ to_percent score }}% 
@@ -403,9 +403,9 @@ template(name='watson_full')
     //     |#{subreddit}
     a(href=url target='_window') #{url}
     // if in_dev
-    //     i.reddit.circular.link.icon.call_reddit_post
-    //     i.code.circular.link.icon.print_this
-    //     i.brain.circular.link.icon.calc_tone
+    //     i.reddit.link.icon.call_reddit_post
+    //     i.code.link.icon.print_this
+    //     i.brain.link.icon.calc_tone
     //     +call_watson mode='url' key='url'
     //     i.remove.link.icon
     //-     +call_watson mode='html'
