--- a/client/client.jade
+++ b/client/client.jade
@@ -36,7 +36,7 @@ template(name='layout')
             
 
 template(name='not_found')
-    .ui.center.aligned.basic.segment
+    .ui.center.aligned.segment
         a(href="/")
             i.massive.yin.yang.grey.link.icon.pulse
 
@@ -54,7 +54,7 @@ template(name='search_shortcut')
                                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.tertiary.large.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class} #{nightmode_class}")
+    .ui.large.compact.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class} #{nightmode_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -73,7 +73,7 @@ template(name='unpick_tag')
         
 template(name='flat_tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    a.ui.basic.small.link.label.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
+    a.ui.small.link.label.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
         //         img.ui.mini.rounded.inline.image.superzoom(src=term.watson.metadata.image )    
