first color header by emotion

--- a/client/card.jade
+++ b/client/card.jade
@@ -35,7 +35,7 @@ template(name='post_card')
         //     +youtube_view key='youtube_id' label='youtube id'
 
         .content
-            a.ui.header(href="/p/#{_id}") #{title}
+            a.ui.header(href="/p/#{_id}" class=emotion_header_class) #{title}
             div
             // if data.selftext_html
             //     a.f12(href="/p/#{_id}")
