--- a/client/client.jade
+++ b/client/client.jade
@@ -54,7 +54,7 @@ template(name='search_shortcut')
                                 
 template(name='tag_picker')
     // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
-    .ui.large.compact.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class} #{nightmode_class}")
+    .ui.large.compact.button.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class} #{nightmode_class}")
         if term
             if term.watson.metadata.image
                 img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
@@ -72,7 +72,7 @@ template(name='unpick_tag')
         
         
 template(name='flat_tag_picker')
-    // a.ui.big.image.rounded.label.zoomer.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
+    // a.ui.big.image.rounded.label.pointer.pick_tag.pick_term(href='#' title="#{count} results" class="#{picker_class} #{thinking_class}")
     a.ui.small.link.basic.label.zoomer.pick_flat_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         // if term
         //     if term.watson.metadata.image
